--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,6 @@ pytz==2025.2
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
 django-model-utils==5.0.0
-django-polaris==2.5.0
 django-environ==0.11.2
 
 # =========================
@@ -21,7 +20,7 @@ django-environ==0.11.2
 psycopg2-binary==2.9.9
 
 # =========================
-# Stellar SDK
+# Stellar SDK (NO django-polaris)
 # =========================
 stellar-sdk==12.2.1
 xdrlib3==0.1.1
