--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # =========================
-# Django Core (LTS – Polaris Compatible)
+# Django Core (Polaris Compatible)
 # =========================
 Django==3.2.25
 asgiref==3.7.2
@@ -21,9 +21,9 @@ django-environ==0.11.2
 psycopg2-binary==2.9.9
 
 # =========================
-# Stellar / Polaris Dependencies
+# Stellar / Polaris Stack
 # =========================
-stellar-sdk==8.2.1
+stellar-sdk==10.4.0
 xdrlib3==0.1.1
 
 # =========================
